--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="temperature">
                     Temperature 
-                    <span id="tempID">?°F</span>
+                    <span id="tempID">?°C</span>
                 </div>
 
         <div class="wrapper">
@@ -71,4 +71,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
